option('test', type: 'feature', value: 'disabled', description: 'test program (requires libpng)')
option('compare', type: 'feature', value: 'disabled', description: 'compare program (requires libpng)')
option('profile', type: 'feature', value: 'disabled', description: 'profiling program')
option('fuzz', type: 'feature', value: 'disabled', description: 'fuzzing consumer')
option('fontconfig', type: 'feature', value: 'auto', description: 'fontconfig support')
option('directwrite', type: 'feature', value: 'auto', description: 'DirectWrite support (Windows only)')
option('coretext', type: 'feature', value: 'auto', description: 'CoreText support (OSX only)')
option('libunibreak', type: 'feature', value: 'auto', description: 'libunibreak support')
option('require_system_font_provider', type: 'boolean', value: 'false', description: 'disallow compilation even if no system font provider was found')
option('asm', type: 'feature', value: 'auto', description: 'compile with ASM')
option('large-tiles', type: 'feature', value: 'disabled', description: 'use larger tiles in the rasterizer (better performance, slightly worse quality)')